manifest/baikal.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: baikal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baikal
  namespace: baikal
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
  - host: baikal.<path:stringreplacesecret#domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: baikal
            port:
              number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: baikal
  namespace: baikal
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - "baikal.<path:stringreplacesecret#domain>"
  rules:
  - backendRefs:
    - name: baikal
      port: 80
